# virtual-lab-api

./: .editorconfig  .env  .env.development  .env.example-ssh-tunnel  .env.local  .env.production  .env.run-docker  .gitignore  .gitlab-ci.yml  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  AUTHORS.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  README.md  SUBSCRIPTION.md  alembic.ini  conftest.py  dev-init-docker.sh  dev-init.sh  dev-p-init.sh  docker-compose-dev-amd.yml  docker-compose-dev.yml  docker-compose.ci.yml  docker-compose.remote.yml  docker-compose.yml  docker-entrypoint.sh  docker-system.yaml  endpoints.md  get_user_token.sh  keycloak-init.sh  mypy.ini  pyproject.toml  setup.py  system.init.sh
.github/workflows/: audit.yml  main-branch-workflow.yml  publish-production.yml  publish-staging.yml  pull-request-workflow.yml  pull-request.yml
alembic/: env.py
alembic/versions/: 012d58ed355a_add_unique_constraint_on_github_file_.py  0a629d99201a_add_simulation_camapign_to_bookmark.py  0af36743e9f3_cleanup_nexus.py  0ccf1babc4c1_add_me_models_category_to_bookmark.py  0e8c813d2693_add_role_to_project_invite.py  0eb5b6e80011_email_verification_model.py  10e0d7bf4813_add_credit_value_to_seat.py  142f4198a2ca_migrate_bookmark_categories_to_entity_.py  1849f8159098_subscription_plans.py  1a33aaaa2490_add_institution_and_course_tables.py  1e5787d3b6f6_add_unique_constraint_course_student_id.py  2192a5aa8ba6_merge_heads_compute_cell_and_workspace_.py  239868dc46e3_subscription_inheritance.py  255e7314d211_add_course_table.py  294486398197_fix_customer_name_in_stripeuser.py  2a8e7c720792_fix_nullable_columns.py  2b3c5dda598e_add_customer_id_to_payment.py  2c590c5cbe3a_add_created_at_to_seat.py  2cd64f276718_add_bookmarks_table.py  2dd76784caea_add_subscription_source.py  2ddf58ddb53f_add_budget_amount_and_vlab_topup.py  325c166bfe76_project_default_value_is_0.py  3296b75fc5a1_remove_notebook_table_and_related_.py  3b4875eae5d9_add_user_preference_logic.py  3c929ac345d4_add_subscription_models.py  43f3dc1937d7_merge_e23d19504702_and_56ad6da93b9c.py  48547fa7c736_rename_bouton_density_enum_value.py  49016d5a3d53_initialize_db.py  4bebe19540f0_add_credits_per_seat_to_course.py  4c6f1051dc93_add_notebook_table.py  4f998a94cbbc_add_card_exp_property_to_subscription_.py  50b8128e89d2_merge_heads.py  5242355ed15d_bookmarks_for_resource_unique_per_.py  54b047e16a93_add_course_enrolment_table.py  551e7395c078_add_promotion_tables.py  56ad6da93b9c_remove_budget_from_vlab.py  5900df67288c_add_unique_constraint_on_github_file_.py  5d5fc00c5997_timestamps.py  62216ef51974_standalone_payment_attach_to_vlab.py  62b359982536_timestamps.py  (+81 more)
env-prep/: docker-compose-dev-amd.yml  docker-compose-dev-p.yml  docker-compose-dev.yml  docs.md  realm-export-dev-p.json  realm-export.json
env-prep/config/: delta-postgres.conf
env-prep/data/: mailpit.db-shm  mailpit.db-wal
env-prep/init/: api_mappings_payload.json  elasticmq.conf  es_view_dataset_payload.json  init-aws.sh  init-db.sh  init-docker.py  init.py  neuroshapes_org_resource.json  redis.conf
scripts/: add-customer-id-to-vlab.py  bulk_invite_to_project.py  clean_user_lab.py  delete_projects.py  fix_group_memberships.py  invite-google-apps-scripts.js  kc_explorer.py  keycloak.sh  manage_stripe_coupons.py  migrate_to_tax_billing.py  normalize_user_country.py  populate_subscription_plans.py  populate_subscription_tiers.py  seed_credit_package_rates.py  send_email.py  send_emails.py  test_attach_custom_properties_kc.py  update_vlab_reference_email.py  upgrade_subscription.py  virtual_lab_lifecycle_cli.py  vlab_manager.py
src/api/: labs.ts
virtual_labs/: COURSES.md  api.py  scheduler.py  test_api.py
virtual_labs/core/: ordering.py  pagination.py  permissions.py  types.py
virtual_labs/domain/: admin.py  billing.py  bookmark.py  common.py  course.py  email.py  institution.py  invite.py  labs.py  notebooks.py  payment.py  payment_method.py  project.py  promotion.py  seat.py  subscription.py  user.py  workspace.py
virtual_labs/infrastructure/: initialize_plans.py  plans_data.py  sentry.py  settings.py
virtual_labs/repositories/: billing_repo.py  bookmark_repo.py  credit_exchange_rate_repo.py  credit_package_rate_repo.py  email_verification.py  email_verification_repo.py  group_repo.py  invite_repo.py  lab_repo.py  labs.py  notebook_repo.py  payment_repo.py  plans.py  project_repo.py  promotion_repo.py  promotion_usage_repo.py  stripe_repo.py  stripe_user_repo.py  subscription_repo.py  user_kc_repo.py  user_preference_repo.py  user_repo.py
virtual_labs/routes/: accounting.py  billing.py  bookmarks.py  common.py  config.py  course.py  email_verification.py  institution.py  invites.py  labs.py  notebooks.py  payments.py  plans.py  projects.py  promotions.py  seat.py  subscription.py  user.py  users.py  virtual-labs.py
virtual_labs/services/: attach_user_groups.py  billing.py  credit_converter.py  labs.py  payment_guard.py  promotion_validator.py  stripe_customer.py
virtual_labs/shared/: group_namespace.py  groups.py  saga.py
virtual_labs/static/: country.json
virtual_labs/tests/: conftest.py  test_accept_lab_invite.py  test_billing.py  test_change_user_role.py  test_config.py  test_credit_converter.py  test_delete_invite.py  test_delete_lab.py  test_delete_user_from_lab.py  test_get_all_labs.py  test_get_lab.py  test_get_lab_invite_details.py  test_invite_user_to_lab.py  test_invite_webhook.py  test_lab_creation.py  test_lab_search.py  test_last_admin_cant_be_removed.py  test_ledger_primitives.py  test_payment.py  test_payment_guard.py  test_project_all_search.py  test_project_deletion.py  test_project_update_budget.py  test_restrict_invalid_access_to_lab.py  test_sentry.py  utils.py  (+3 more)
(+405 files in other folders)
