[tool.poetry]
name = "virtual-labs"
version = "0.1.0"
description = ""
authors = ["Blue Brain Project, EPFL"]
readme = "README.md"
packages = [{include = "virtual_labs"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.27.1"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.29"}
uuid = "^1.30"
datetime = "^5.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
python-keycloak = "4.3.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
httpx = "^0.27.0"
alembic = "^1.13.1"
fastapi-mail = "^1.4.1"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.1"
stripe = "^9.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
pytest = "^8.0.2"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"
pytest-asyncio = "0.21.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
