[tool.poetry]
name = "virtual-labs"
version = "0.1.0"
description = ""
authors = ["Blue Brain Project, EPFL"]
readme = "README.md"
packages = [{include = "virtual_labs"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.121.1"}
uvicorn = "^0.38.0"
uvloop = "^0.22.1"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.29"}
uuid = "^1.30"
datetime = "^5.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.11"
loguru = "^0.7.2"
pydantic-settings = "^2.12.0"
python-keycloak = "5.8.1"
pydantic = {extras = ["email"], version = "^2.6.3"}
httpx = "^0.28.1"
alembic = "^1.13.1"
fastapi-mail = "^1.4.1"
pyjwt = "^2.8.0"
asyncpg = "^0.30.0"
asyncpg-stubs = "^0.30.2"
stripe = "^9.6.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.44.0"}
requests = "^2.32.5"
email-validator = "^2.2.0"
redis = "^5.2.1"
asyncssh = "^2.21.0"
obp-accounting-sdk = "^0.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
mypy = "^1.8.0"
pre-commit = "^4.4.0"
pytest = "^8.0.2"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"
pytest-asyncio = "^1.3.0"
python-dotenv = "^1.0.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
norecursedirs = ["tests/labs"]
markers = [
  "integration: mark a test as an integration test"
]

[tool.mypy]
exclude = "scripts/*"

[tool.ruff]
# Exclude scripts directory from linting
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "scripts",
]

[tool.poetry.scripts]
populate-tiers = "scripts.populate_subscription_tiers:run_async"
upgrade-subscription = "scripts.upgrade_subscription:run_async"
send_email = "scripts.send_email:run_async"
