[project]
name = "virtual-labs"
version = "1.0.0"
description = ""
authors = [{ name = "Blue Brain Project, EPFL" }, { name = "Open Brain Institute" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[all]>=0.115.0,<1.0.0",
    "uvicorn>=0.27.1,<0.28",
    "sqlalchemy[asyncio, mypy]>=2.0.29,<3",
    "uuid>=1.30,<2",
    "datetime>=5.4,<6",
    "python-dotenv>=1.0.1,<2",
    "psycopg2-binary>=2.9.9,<3",
    "loguru>=0.7.2,<0.8",
    "pydantic-settings>=2.2.1,<3",
    "python-keycloak>=4.7.0,<5",
    "pydantic[email]>=2.12.5,<3",
    "httpx>=0.27.0,<0.28",
    "alembic>=1.13.1,<2",
    "fastapi-mail>=1.6.0,<2",
    "pyjwt>=2.8.0,<3",
    "asyncpg>=0.29.0,<0.30",
    "asyncpg-stubs>=0.29.1,<0.30",
    "stripe>=9.6.0,<10",
    "sentry-sdk[fastapi]>=2.14.0,<3",
    "requests>=2.33.0,<3",
    "email-validator>=2.2.0,<3",
    "redis>=5.2.1,<6",
    "asyncssh>=2.21.0,<3",
    "obp-accounting-sdk>=0.5.1,<0.6",
]

[project.scripts]
populate-tiers = "scripts.populate_subscription_tiers:run_async"
upgrade-subscription = "scripts.upgrade_subscription:run_async"
send_emails = "scripts.send_emails:run_async"
manage-coupons = "scripts.manage_stripe_coupons:run_async"
bulk-invite = "scripts.bulk_invite_to_project:run_async"
migrate-tax-billing = "scripts.migrate_to_tax_billing:run"
normalize-country = "scripts.normalize_user_country:run_async"
update-vlab-email = "scripts.update_vlab_reference_email:run_async"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "mypy>=1.8.0,<2",
    "pre-commit>=3.6.2,<4",
    "pytest>=9.0.3,<10",
    "requests>=2.33.0,<3",
    "types-requests>=2.33.0,<3",
    "pytest-asyncio>=1.0,<2",
    "python-dotenv>=1.0.1,<2",
    "pytest-cov>=6.1.1,<7",
    "ty>=0.0.35",
]
scripts = [
    "rich>=13.0,<14",
    "InquirerPy>=0.3.4,<0.4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["virtual_labs"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["virtual_labs"]
norecursedirs = ["virtual_labs/tests/bookmarks"]

markers = [
  "integration: mark a test as an integration test"
]

[tool.mypy]
exclude = "scripts/*"
plugins = ["pydantic.mypy"]

[tool.ty.src]
include = ["virtual_labs"]
exclude = ["scripts", "alembic"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-type-ignore-comment = "ignore"


[tool.ruff]
# Exclude scripts directory from linting
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "scripts",
]
